--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Final_year_project'"
+       "'e:\\\\Final_year_project\\\\End-to-End-Chest-Cancer-Prediction-Implementation-using-MLOps-DVC-CICD\\\\research'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\'"
+       "'e:\\\\Final_year_project\\\\End-to-End-Chest-Cancer-Prediction-Implementation-using-MLOps-DVC-CICD'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,36 +60,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (940937813.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[65], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    from\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
-    "import yaml\n",
-    "from \n",
+    "\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
     "    source_URL: str\n",
-    "    \n",
     "    local_data_file: Path\n",
     "    unzip_dir: Path\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cnnClassifier.constants import *\n",
+    "from cnnClassifier.utils.common import read_yaml, create_directories\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e:\\\n"
+      "e:\\Final_year_project\\End-to-End-Chest-Cancer-Prediction-Implementation-using-MLOps-DVC-CICD\n"
      ]
     }
    ],
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -333,18 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-10 12:06:50,285: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-02-10 12:06:50,291: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-02-10 12:06:50,294: INFO: common: created directory at: artifacts]\n",
-      "[2025-02-10 12:06:50,297: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-02-10 12:06:50,303: INFO: 1983665874: Downloading data from https://drive.google.com/file/d/1hxjw3DiQuzBCIiehk5ZI0pGR62e6JJQT/view?usp=drive_link into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-02-17 14:02:30,890: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-02-17 14:02:30,894: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-17 14:02:30,897: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-17 14:02:30,899: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-02-17 14:02:30,902: INFO: 1983665874: Downloading data from https://drive.google.com/file/d/1SA4UUMQuR4rB2wPXcAgs5wn9i76iUx4V/view?usp=drive_link into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -352,17 +351,17 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (original): https://drive.google.com/uc?/export=download&id=1hxjw3DiQuzBCIiehk5ZI0pGR62e6JJQT\n",
-      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1hxjw3DiQuzBCIiehk5ZI0pGR62e6JJQT&confirm=t&uuid=e31de18c-5186-4136-ad6e-1414ccae38d5\n",
-      "To: E:\\Final_year_project\\End-to-End-Chest-Cancer-Prediction-Implementation-using-MLOps-DVC-CICD\\artifacts\\data_ingestion\\data.zip\n",
-      "100%|██████████| 49.0M/49.0M [00:10<00:00, 4.87MB/s]"
+      "From (original): https://drive.google.com/uc?/export=download&id=1SA4UUMQuR4rB2wPXcAgs5wn9i76iUx4V\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1SA4UUMQuR4rB2wPXcAgs5wn9i76iUx4V&confirm=t&uuid=4d6df143-41d7-4e60-919e-c64d55f45fb5\n",
+      "To: e:\\Final_year_project\\End-to-End-Chest-Cancer-Prediction-Implementation-using-MLOps-DVC-CICD\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 124M/124M [00:25<00:00, 4.87MB/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-10 12:07:05,180: INFO: 1983665874: Downloaded data from https://drive.google.com/file/d/1hxjw3DiQuzBCIiehk5ZI0pGR62e6JJQT/view?usp=drive_link into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-02-17 14:03:02,373: INFO: 1983665874: Downloaded data from https://drive.google.com/file/d/1SA4UUMQuR4rB2wPXcAgs5wn9i76iUx4V/view?usp=drive_link into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
