--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'e:\\\\Final_year_project\\\\End-to-End-Chest-Cancer-Prediction-Implementation-using-MLOps-DVC-CICD'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,20 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-15 11:00:40,117: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-02-15 11:00:40,152: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-02-15 11:00:40,158: INFO: common: created directory at: artifacts]\n",
-      "[2025-02-15 11:00:40,159: INFO: common: created directory at: artifacts/prepare_base_model]\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "58889256/58889256 [==============================] - 13s 0us/step\n",
-      "[2025-02-15 11:00:56,095: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2025-02-17 15:34:52,454: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-02-17 15:34:52,462: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-17 15:34:52,466: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-17 15:34:52,469: INFO: common: created directory at: artifacts/prepare_base_model]\n",
+      "[2025-02-17 15:34:53,291: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
@@ -269,11 +273,11 @@
       "                                                                 \n",
       " flatten (Flatten)           (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 2)                 50178     \n",
+      " dense (Dense)               (None, 4)                 100356    \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 14,764,866\n",
-      "Trainable params: 50,178\n",
+      "Total params: 14,815,044\n",
+      "Trainable params: 100,356\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
